Implementado Professor.