@@ -5,44 +5,32 @@ import br.com.dbccompany.time7.gestaodeensino.dto.ProfessorDTO;
 import br.com.dbccompany.time7.gestaodeensino.dto.ProfessorUpdateDTO;
 import br.com.dbccompany.time7.gestaodeensino.entity.ProfessorEntity;
 import br.com.dbccompany.time7.gestaodeensino.exceptions.RegraDeNegocioException;
-import br.com.dbccompany.time7.gestaodeensino.repositoryOLD.ProfessorRepository;
+import br.com.dbccompany.time7.gestaodeensino.repository.ProfessorRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@AllArgsConstructor
 public class ProfessorService {
 
-    @Autowired
-    private ProfessorRepository professorRepository;
+    private final ProfessorRepository professorRepository;
 
-    @Autowired
-    private EnderecoService enderecoService;
+    private final ObjectMapper objectMapper;
 
-    @Autowired
-    private DisciplinaService disciplinaService;
-
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    @Autowired
-    private EmailService emailService;
+    private final EmailService emailService;
 
 
-    public ProfessorDTO post(ProfessorCreateDTO professorCreateDTO) {
+    public ProfessorDTO save(ProfessorCreateDTO professorCreateDTO) {
         log.info("Criando o professor...");
 
-        ProfessorEntity professorEntity = objectMapper.convertValue(professorCreateDTO, ProfessorEntity.class);
-        try {
-            professorEntity = professorRepository.adicionar(professorEntity);
-        } catch (RegraDeNegocioException e) {
-            e.getCause();
-        }
+        ProfessorEntity professorEntity = createToEntity(professorCreateDTO);
+
+        professorEntity = professorRepository.save(professorEntity);
 
         ProfessorDTO professorDTO = objectMapper.convertValue(professorEntity, ProfessorDTO.class);
         log.info("Professor " + professorDTO.getNome() + " criado!");
@@ -51,35 +39,35 @@ public class ProfessorService {
         return professorDTO;
     }
 
-    public ProfessorDTO put(Integer id, ProfessorUpdateDTO professorAtualizar) throws RegraDeNegocioException {
-        log.info("Atualizando o professor...");
-        ProfessorDTO professorDTO = objectMapper.convertValue(professorAtualizar, ProfessorDTO.class);
-        professorDTO.setIdProfessor(id);
+    public ProfessorDTO update(Integer idProfessor, ProfessorUpdateDTO professorAtualizar) throws RegraDeNegocioException {
+        ProfessorEntity professorEntityRecuperado = findById(idProfessor);
+        ProfessorEntity professorEntityAtualizar = updateToEntity(professorAtualizar);
 
-        if (professorRepository.editar(id, objectMapper.convertValue(professorAtualizar, ProfessorEntity.class))) {
-            log.info(professorDTO.getNome() + " teve seus dados atualizados");
-            return professorDTO;
-        } else {
-            throw new RegraDeNegocioException("Falha ao atualizar o professor");
-        }
+        professorEntityAtualizar.setDisciplinaEntities(professorEntityRecuperado.getDisciplinaEntities());
+        professorEntityAtualizar.setEnderecoEntity(professorEntityRecuperado.getEnderecoEntity());
+        professorEntityAtualizar.setIdProfessor(idProfessor);
+
+        log.info("Atualizando o professor...");
+        ProfessorDTO professorDTO = entityToDTO(professorRepository.save(professorEntityAtualizar));
+        log.info("Professor atualizado");
+
+        return professorDTO;
     }
 
     public void delete(Integer id) throws RegraDeNegocioException {
         log.info("Deletando o professor...");
-        ProfessorEntity professorRecuperado = findByIdProfessor(id);
+        ProfessorEntity professorRecuperado = findById(id);
 
-        try {
-            enderecoService.deleteEndereco(professorRecuperado.getIdEndereco());
-            disciplinaService.deleteProfessorDaDisciplina(professorRecuperado.getIdProfessor());
-            professorRepository.remover(id);
-        } catch (RegraDeNegocioException e) {
-            e.printStackTrace();
-        }
+        professorRecuperado.setEnderecoEntity(professorRecuperado.getEnderecoEntity());
+        professorRecuperado.setDisciplinaEntities(professorRecuperado.getDisciplinaEntities());
+
+        professorRepository.delete(professorRecuperado);
+        log.info(professorRecuperado.getNome() + " removido do banco de dados");
     }
 
     public List<ProfessorDTO> list() throws RegraDeNegocioException {
         log.info("Listando todos professores");
-        return professorRepository.listar().stream()
+        return professorRepository.findAll().stream()
                     .map(professor -> objectMapper.convertValue(professor, ProfessorDTO.class))
                     .collect(Collectors.toList());
 
@@ -87,32 +75,37 @@ public class ProfessorService {
 
     public ProfessorDTO listById(Integer idProfessor) throws RegraDeNegocioException {
         log.info("Listando professor por id");
-        return objectMapper.convertValue(findByIdProfessor(idProfessor), ProfessorDTO.class);
+        return objectMapper.convertValue(findById(idProfessor), ProfessorDTO.class);
     }
 
     public List<ProfessorDTO> listByName(String nomeProfessor) throws RegraDeNegocioException {
-        log.info("Listando professor por nome");
-        if (findByNameProfessor(nomeProfessor).isEmpty()) {
-            log.info("Nome não encontrado");
-            throw new RegraDeNegocioException("Nome não encontrado");
-        } else {
-            log.info("Nome encontrado");
-            return findByNameProfessor(nomeProfessor).stream()
-                    .map(professor -> objectMapper.convertValue(professor, ProfessorDTO.class))
-                    .collect(Collectors.toList());
-        }
+        return findByName(nomeProfessor).stream()
+                .map(this::entityToDTO)
+                .toList();
     }
 
 
     //Utilização Interna
-    public ProfessorEntity findByIdProfessor(Integer idProfessor) throws RegraDeNegocioException {
-        return professorRepository.professorPorId(idProfessor);
+
+    public ProfessorEntity updateToEntity(ProfessorUpdateDTO professorUpdateDTO) {
+        return objectMapper.convertValue(professorUpdateDTO, ProfessorEntity.class);
     }
 
-    public List<ProfessorEntity> findByNameProfessor(String nome) throws RegraDeNegocioException {
-        return professorRepository.listar().stream()
-                .filter(pessoa -> pessoa.getNome().toUpperCase().contains(nome.toUpperCase()))
-                .collect(Collectors.toList());
+    public ProfessorEntity createToEntity(ProfessorCreateDTO professorCreateDTO) {
+        return objectMapper.convertValue(professorCreateDTO, ProfessorEntity.class);
+    }
+
+    public ProfessorDTO entityToDTO(ProfessorEntity professorEntity) {
+        return objectMapper.convertValue(professorEntity, ProfessorDTO.class);
+    }
+
+    public ProfessorEntity findById(Integer idProfessor) throws RegraDeNegocioException {
+        return professorRepository.findById(idProfessor)
+                .orElseThrow(() -> new RegraDeNegocioException("Professor não encontrado"));
+    }
+
+    public List<ProfessorEntity> findByName(String nome) {
+        return professorRepository.findAllByNomeContainingIgnoreCase(nome);
     }
 
 }
